--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------
+1.52 Beta 1  2016-11-06
+---------------------------------------
+
+- fixed reference notices (goffy)
+- changed upload directory for cat image to root/uploads/lexikon/categories/images (goffy)
+- created new configs imguploadwd and imguploadsize (goffy)
+
+---------------------------------------
 1.51 Final  2013-07-11
 ---------------------------------------
 
