--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,6 +6,7 @@
 - moved functions to Utility class (mamba)
 - adjusted DB defaults for 'item_tag' (mamba)
 - changed extensions to .tpl (mamba)
+- redirect changes it case of error (aerograf/bleekk)
 
 
 1.52 Beta 1       NOT RELEASED
