--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,4 +1,4 @@
-1.52 Beta 2       NOT RELEASED
+1.52 Beta 2         2017-02-06
 =================================
 - started conversion to XMF (mamba)
 - standard copyright headers (mamba)
