--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,12 +1,16 @@
+<h5>1.53 Beta 2   [2020-11-15]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 4
+<hr>
+- PHP7, PHP8 adjustments (mamba)
+- testdata (mamba)
+- migrate (mamba)
+
+
 <h5>1.53 Beta 1     [NOT RELEASED]</h5>  Dev: Xoops 2.5.9, PHP 7.2.3
 <hr>
 - replaced $xoopsGTicket to $GLOBALS['xoopsSecurity'] (mamba)
 - added namespaces (mamba)
 - added Request (mamba)
 - added LetterChoice highlighting available items (mamba)
-
-WORK IN PROGRESS
-
 
 
 1.52 Beta 2       NOT RELEASED
